--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Online Notepad📃</title>
+        <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/2/2a/Notepad.png" type="image/gif" sizes="16x16">
 	<meta name="title" content="Online Notepad📃">
 	<meta name="description" content="Simple Online Notepad📃">
 	<meta name="author" content="Healer">
